--- a/templates/monitoring_report.html
+++ b/templates/monitoring_report.html
@@ -39,6 +39,25 @@
         <table class="tg">
             <thead >
               <tr  style="background-color: mediumpurple;">
+                <!-- Namespace allows you to access the variable outside the block 
+                            
+                    See the Scoping Behavior section from this link
+
+                    https://jinja.palletsprojects.com/en/2.10.x/templates/
+
+                    "As of version 2.10 more complex use cases can be handled using namespace 
+                    objects which allow propagating of changes across scopes:
+
+                    {% set ns = namespace(found=false) %}
+                    {% for item in items %}
+                        {% if item.check_something() %}
+                            {% set ns.found = true %}
+                        {% endif %}
+                        * {{ item.title }}
+                    {% endfor %}
+                    Found item having something: {{ ns.found }}"
+                -->
+
                 {% set ns = namespace (categories = packet.formatted_packet_header |groupby('field_category'))   %}
                 {% for field_category in packet.formatted_packet_header | map(attribute="field_category")|  unique %}
                     {% for category in ns.categories %}
@@ -73,6 +92,11 @@
                 {% endfor %}
               </tr>
               <tr >
+                <!--
+                    Some of the elif could be combined into a single check but it was easier for me to read 
+                    in separate statements
+                -->
+
                 {% for field in packet.formatted_packet_header %}
                     {% if (field.field_name == 'Time To Live (TTL)' or field.field_name == 'Protocol') %}
                         <td class="tg">{{field.field_data_hex | int(base=16) }}</td>
@@ -98,12 +122,33 @@
                         </td>
                     {% elif (field.field_name == 'Source IP' or field.field_name == 'Destination IP') %}
                         <td class="tg">
-                            {% set ns = namespace (ip = '') %} <!-- namespace allows us to access the variable outside the block -->
+                            <!-- Namespace allows you to access the variable outside the block 
+                            
+                                See the Scoping Behavior section from this link
+
+                                https://jinja.palletsprojects.com/en/2.10.x/templates/
+
+                                "As of version 2.10 more complex use cases can be handled using namespace objects 
+                                which allow propagating of changes across scopes:
+
+                                {% set ns = namespace(found=false) %}
+                                {% for item in items %}
+                                    {% if item.check_something() %}
+                                        {% set ns.found = true %}
+                                    {% endif %}
+                                    * {{ item.title }}
+                                {% endfor %}
+                                Found item having something: {{ ns.found }}"
+                            -->
+                            
+                            {% set ns = namespace (ip = '') %} 
                             {% for octet in field.field_data_hex.split(' ') %}
                                 {% set ns.ip = ns.ip + '.' + (octet | int(base=16) | string ) %}
                             {% endfor %}
 
-                            {{ns.ip[1:]}} <!-- The loop above adds . to the from of the ip so we just remove it with [1:] -->
+                            <!-- The loop above adds . to the from of the ip so this just 
+                                removes it with [1:] -->
+                            {{ns.ip[1:]}} 
                         </td>
                     {% else %}
                         <td class="tg">-</td>
@@ -112,6 +157,11 @@
               </tr>
               
               <tr >
+                <!--
+                    Some packets weren't full octets so as a quick workaround I combined them 
+                    (e.g. IP Version (4 bits) / Internet Header Length (4 bits))  
+                    Then I just separate them when displaying the table. 
+                -->
                 {% for field in packet.formatted_packet_header %}
                     {% if field.field_name == 'IP Version (4 bits) / Internet Header Length (4 bits)' %}
                         <td class="tg">{{ field.field_data_binary[:4]  }} / {{ field.field_data_binary[4:] }} </td>
